--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "redux": "^4.1.0"
+    "redux": "^4.1.0",
+    "redux-logger": "^3.0.6"
   }
 }
